--- a/trunk/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/trunk/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -126,9 +126,11 @@
     <Compile Include="Entities\Ranger.cs" />
     <Compile Include="Entities\Utils\Animation.cs" />
     <Compile Include="EventHeaders\ClientConnectedEventArgs.cs" />
-    <Compile Include="EventHeaders\PlayerStateChangedWithArrowEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerStateChangedEventArgs\PlayerStateUpdatedEventArgs\PlayerMovementStateUpdatedEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerStateChangedEventArgs\PlayerMovementStateChangedEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerStateChangedEventArgs\PlayerStateChangedWithArrowEventArgs.cs" />
     <Compile Include="EventHeaders\PlayerStateChangedEventArgs.cs" />
-    <Compile Include="EventHeaders\PlayerStateUpdatedEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerStateChangedEventArgs\PlayerStateUpdatedEventArgs.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameStateEngine\GameStates\ConnectingGameState.cs" />
     <Compile Include="GameStateEngine\NetworkGUIGameState.cs" />
@@ -160,17 +162,18 @@
     <Compile Include="PlayerStateMachine\ActionStates\AttackingState.cs" />
     <Compile Include="PlayerStateMachine\ActionStates\DefendingState.cs" />
     <Compile Include="PlayerStateMachine\ActionStates\PreparingShotState.cs" />
+    <Compile Include="PlayerStateMachine\MovementStates\MovementPlayerState.cs" />
     <Compile Include="PlayerStateMachine\PlayerState.cs" />
-    <Compile Include="PlayerStateMachine\VerticalMovementStates\StartedJumpingState.cs" />
-    <Compile Include="PlayerStateMachine\VerticalMovementStates\VerticalIdleState.cs" />
-    <Compile Include="PlayerStateMachine\HorizontalMovementStates\HorizontalIdleState.cs" />
-    <Compile Include="PlayerStateMachine\HorizontalMovementStates\StoppingWalkingLeftState.cs" />
-    <Compile Include="PlayerStateMachine\HorizontalMovementStates\StoppingWalkingRightState.cs" />
-    <Compile Include="PlayerStateMachine\VerticalMovementStates\VerticalMovementState.cs" />
-    <Compile Include="PlayerStateMachine\VerticalMovementStates\JumpingState.cs" />
-    <Compile Include="PlayerStateMachine\HorizontalMovementStates\WalkingLeftState.cs" />
-    <Compile Include="PlayerStateMachine\HorizontalMovementStates\WalkingRightState.cs" />
-    <Compile Include="PlayerStateMachine\HorizontalMovementStates\HorizontalMovementState.cs" />
+    <Compile Include="PlayerStateMachine\MovementStates\VerticalMovementStates\StartedJumpingState.cs" />
+    <Compile Include="PlayerStateMachine\MovementStates\VerticalMovementStates\VerticalIdleState.cs" />
+    <Compile Include="PlayerStateMachine\MovementStates\HorizontalMovementStates\HorizontalIdleState.cs" />
+    <Compile Include="PlayerStateMachine\MovementStates\HorizontalMovementStates\StoppingWalkingLeftState.cs" />
+    <Compile Include="PlayerStateMachine\MovementStates\HorizontalMovementStates\StoppingWalkingRightState.cs" />
+    <Compile Include="PlayerStateMachine\MovementStates\VerticalMovementStates\VerticalMovementState.cs" />
+    <Compile Include="PlayerStateMachine\MovementStates\VerticalMovementStates\JumpingState.cs" />
+    <Compile Include="PlayerStateMachine\MovementStates\HorizontalMovementStates\WalkingLeftState.cs" />
+    <Compile Include="PlayerStateMachine\MovementStates\HorizontalMovementStates\WalkingRightState.cs" />
+    <Compile Include="PlayerStateMachine\MovementStates\HorizontalMovementStates\HorizontalMovementState.cs" />
     <Compile Include="Managers\MapManager.cs" />
     <Compile Include="Managers\PlayerManager.cs" />
     <Compile Include="Managers\TextureManager.cs" />
